# OQSDK

./: .gitignore  CMakeLists.txt  LICENSE  README.md
other/vs2019/OQSDK_VS_Example/: OQSDK_VS_Example.sln
other/vs2019/OQSDK_VS_Example/OQSDK_VS_Example/: OQSDK_VS_Example.vcxproj  OQSDK_VS_Example.vcxproj.filters  dllmain.cpp
other/vs2019/OQSDK_VS_Example/OQSDK_VS_Example/oqsdk/include/: oqsdk.h  oqsdk.hpp
other/vs2019/OQSDK_VS_Example/OQSDK_VS_Example/oqsdk/src/core/: api.cpp  api_funcs.inc  event.cpp  event.hpp  event_callback.hpp  type.hpp
other/vs2019/OQSDK_VS_Example/OQSDK_VS_Example/oqsdk/src/utils/: kmp.cpp  rpn.cpp  rpn.h
src/example/: example.cc  example.cpp  example.hpp
src/oqsdk/: CMakeLists.txt
src/oqsdk/include/: oqsdk.h  oqsdk.hpp
src/oqsdk/src/core/: api.cpp  api.hpp  api_funcs.inc  def_export_event.hpp  event.hpp  event_callback.hpp  factory.hpp  inc_std.hpp  message.hpp  ono_api.hpp  type.hpp
src/oqsdk/src/utils/: kmp.cpp  kmp.h  rpn.cpp  rpn.h
